--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -265,6 +265,12 @@ a[class*='button-']:hover {
   text-align: center;
   padding-right: 0;
 }
+.session-log th:last-child,
+.session-log td:last-child {
+  width: 1%;
+  white-space: nowrap;
+  text-align: center;
+}
 
 /* Settings */
 .settings-actions, .settings-controls {
